# meteostations-vector-cube

./: .gitignore  README.md  Snakefile  environment.yml  pyproject.toml
.github/workflows/: lint.yaml
meteostations_vector_cube/: __init__.py  netatmo_utils.py  ts_utils.py
notebooks/: example-tsdf.ipynb  io.ipynb  irregular-indexing.ipynb  netatmo-preprocessing.ipynb  netatmo-tstore.ipynb  official-stations.ipynb  overview.ipynb  time-filters.ipynb  ts.ipynb  tsarray.ipynb
