[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meteostations-vector-cube"
version = "0.1.0"
description = "Testing vector cube backends for meteostations-geopy"
authors = [{ name = "Martí Bosch", email = "marti.bosch@epfl.ch" }]
readme = "README.md"
license = { text = "GPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/martibosch/meteostations-vector-cube"

[tool.setuptools.packages.find]
include = ["meteostations_vector_cube", "meteostations_vector_cube.*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["meteostations_vector_cube"]

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]
